feat: [CCM-10384]: batch + ce-ng fixes from testing - bucket policy update handling, exception handling in s3toCH job